    methods). (Daniel Persson)
  . Fixed bug #68893 (Stackoverflow in datefmt_create). (Anatol)
  . Fixed bug #66289 (Locale::lookup incorrectly returns en or en_US if locale
    is empty). (Anatol)
  . Fixed bug #70484 (selectordinal doesn't work with named parameters).
    (Anatol)
  . Fixed bug #72061 (Out-of-bounds reads in zif_grapheme_stripos with negative
    offset). (Stas)

- ODBC:
  . Fixed bug #63171 (Script hangs after max_execution_time). (Remi)

- Opcache:
  . Fixed bug #71843 (null ptr deref ZEND_RETURN_SPEC_CONST_HANDLER).
    (Laruence)

- PDO:
  . Fixed bug #52098 (Own PDOStatement implementation ignore __call()).
    (Daniel kalaspuffar, Julien)
  . Fixed bug #71447 (Quotes inside comments not properly handled). (Matteo)

- PDO_DBlib:
  . Fixed bug #71943 (dblib_handle_quoter needs to allocate an extra byte).
    (Adam Baratz)
  . Add DBLIB-specific attributes for controlling timeouts. (Adam Baratz)

- PDO_pgsql:
  . Fixed bug #62498 (pdo_pgsql inefficient when getColumnMeta() is used).
    (Joseph Bylund)

- Postgres:
  . Fixed bug #71820 (pg_fetch_object binds parameters before call
    constructor). (Anatol)
  . Fixed bug #71998 (Function pg_insert does not insert when column
    type = inet). (Anatol)

- SOAP:
  . Fixed bug #71986 (Nested foreach assign-by-reference creates broken
    variables). (Laruence)

- SPL:
  . Fixed bug #71838 (Deserializing serialized SPLObjectStorage-Object can't
    access properties in PHP). (Nikita)
  . Fixed bug #71735 (Double-free in SplDoublyLinkedList::offsetSet). (Stas)
  . Fixed bug #67582 (Cloned SplObjectStorage with overwritten getHash fails
    offsetExists()). (Nikita)
  . Fixed bug #52339 (SPL autoloader breaks class_exists()). (Nikita)

- Standard:
  . Fixed bug #71995 (Returning the same var twice from __sleep() produces
    broken serialized data). (Laruence)
  . Fixed bug #71940 (Unserialize crushes on restore object reference).
    (Laruence)