@@ -340,6 +340,9 @@ PHP                                                                        NEWS
 - Intl:
   . Fixed bug #72533 (locale_accept_from_http out-of-bounds access). (Stas)
 
+- Intl:
+  . Fixed bug #73473 (Stack Buffer Overflow in msgfmt_parse_message). (libnex)
+
 - Mbstring:
   . Fixed bug #72405 (mb_ereg_replace - mbc_to_code (oniguruma) -
     oob read access). (Laruence)
